fix(list-item): add missing padding

--- a/packages/calcite-components/src/components/list-item/list-item.scss
+++ b/packages/calcite-components/src/components/list-item/list-item.scss
@@ -190,4 +190,13 @@ td:focus {
   @apply py-3;
 }
 
+.label,
+.description,
+.content-bottom {
+  &:only-child {
+    margin: 0px;
+    padding-block: 0.25rem;
+  }
+}
+
 @include base-component();
